# the-hat-game

./: .flaskenv  .gitignore  Procfile  README.md  TODO.md  config.py  hat-game.py  pyproject.toml  requirements.txt
hat_game/: __init__.py  errors.py  forms.py  id_generator.py  models.py  names.json  routes.py
hat_game/static/css/: main.css
hat_game/static/js/: game.js  navbar.js
hat_game/templates/: 404.html  500.html  base.html  game.html  game_join_form.html  game_join_popup.html  index.html
migrations/versions/: 1ca6c9ea0f76_.py  f9a0806da390_.py
tests/: test_hat_game.py
