[tool.poetry]
name = "hat-game"
version = "0.1.0"
description = ""
authors = ["James Andrew <james.andrew@metaswitch.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "1"
flask-bootstrap = "^3.3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
