[tool.poetry]
name = "hat-game"
version = "0.1.0"
description = ""
authors = ["James Andrew <james.andrew@metaswitch.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "1"
flask-bootstrap = "^3.3.7"
flask-sqlalchemy = "^2.4.1"
flask-wtf = "^0.14.3"
flask-migrate = "^2.5.3"
python-dotenv = "^0.13.0"
flask-moment = "^0.9.0"
apscheduler = "^3.6.3"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
